--- a/Calendar/Calendar.Shared/Themes/Bottle.xaml
+++ b/Calendar/Calendar.Shared/Themes/Bottle.xaml
@@ -2,16 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Calendar">
-    <Brush x:Key="MonthBg">#FF009593</Brush>
-    <Brush x:Key="WeekNamesBg">#FF7aaf95</Brush>
-    <Brush x:Key="WeekNamesFg">#FFf5f4ed</Brush>
-    <Brush x:Key="DayBg">#ff7aaf95</Brush>
-    <Brush x:Key="DayFg">#ff303030</Brush>
-    <Brush x:Key="WeekendBg">#FFc50d49</Brush>
-    <Brush x:Key="HolidayTypesBg">#FF009593</Brush>
-    <Brush x:Key="MainBg">#ff4b7875</Brush>
-    <Brush x:Key="MainFg">#FFf5f4ed</Brush>
-    <Brush x:Key="NotesBg">#FFe9f0ee</Brush>
-    <Brush x:Key="SelectionFg">#FFFFFFFF</Brush>
-    <Brush x:Key="DaySelected">#FFe9f0ee</Brush>
+    <Brush x:Key="MainColor">#FF01837D</Brush>
+    <Brush x:Key="AdditionalColor">#FF16AAA3</Brush>
+    <Brush x:Key="HolidayTitleColor">#FF4B7875</Brush>
 </ResourceDictionary>
