--- a/Calendar/Calendar.Shared/Themes/CalendarDictionary.xaml
+++ b/Calendar/Calendar.Shared/Themes/CalendarDictionary.xaml
@@ -2,16 +2,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Calendar">
-
+    
     <x:String x:Key="AppName">Calendar</x:String>
     <Color x:Key="AdjBack">#ff353535</Color>
     <Color x:Key="AdjFore">#ff474747</Color>
     <!--CALENDAR-->
     <Style x:Key="CommonCalendarItemStyle" TargetType="GridViewItem">
-        <Setter Property="Height" Value="70"/>
-        <Setter Property="Width" Value="70"/>
         <Setter Property="FontFamily" Value="Minion Pro"/>
-        <Setter Property="FontSize" Value="34"/>
         <Setter Property="Padding" Value="2"/>
         <Setter Property="Margin" Value="0"/>
         <Setter Property="BorderThickness" Value="0"/>
@@ -22,24 +19,21 @@
         <Setter Property="VerticalContentAlignment" Value="Bottom"/>
     </Style>
     <Style x:Name="AdjMonthStyle" x:Key="AdjMonthStyle" TargetType="GridViewItem" BasedOn="{StaticResource ResourceKey=CommonCalendarItemStyle}">
-        <Setter Property="Foreground" Value="#ff303030"/>
-        <Setter Property="Background" Value="#ff474747"/>
+        <Setter Property="Foreground" Value="#FF676768"/>
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="VerticalContentAlignment" Value="Bottom"/>
     </Style>
     <Style x:Name="TodayStyle" x:Key="TodayStyle" TargetType="GridViewItem" BasedOn="{StaticResource ResourceKey=CommonCalendarItemStyle}">
         <Setter Property="VerticalContentAlignment" Value="Bottom"/>
-        <Setter Property="BorderThickness" Value="2"/>
+        <Setter Property="BorderThickness" Value="3"/>
     </Style>
     
     <Style x:Name="WeekNameStyle" x:Key="WeekNameStyle" TargetType="GridViewItem" >
-        <Setter Property="FontSize" Value="24"/>
         <Setter Property="FontFamily" Value="Minion Pro"/>
-        <Setter Property="Padding" Value="5, 10, 5, 0"/>
         <Setter Property="Margin" Value="0"/>
         <Setter Property="BorderBrush" Value="Black"/>
-        <Setter Property="Height" Value="70"/>
-        <Setter Property="Width" Value="70"/>
         <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="VerticalContentAlignment" Value="Bottom"/>
     </Style>
 
     <Style x:Name="WeekendStyle" x:Key="WeekendStyle" TargetType="GridViewItem" BasedOn="{StaticResource ResourceKey=CommonCalendarItemStyle}">
@@ -63,15 +57,9 @@
     <!--DECADES-->
     <Style x:Key="DecadeMonthStyle" TargetType="GridViewItem">
         <Setter Property="Foreground" Value="#ffffffff"/>
-        <Setter Property="FontSize" Value="36"/>
         <Setter Property="FontFamily" Value="Minion Pro"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="BorderThickness" Value="3"/>
-        <Setter Property="BorderBrush" Value="#ff855a7b"/>
-        <Setter Property="Width" Value="130"/>
-        <Setter Property="Height" Value="100"/>
         <Setter Property="Margin" Value="1"/>
-        <Setter Property="Padding" Value="0,5,0,0"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="AllowDrop" Value="False"/>
@@ -84,16 +72,12 @@
 
     <!--CALENDAR BOTTOM MENU-->
     <Style x:Name="HolidayFlyoutStyle" x:Key="HolidayFlyoutStyle" TargetType="ListViewItem">
-        <Setter Property="FontSize" Value="26"/>
         <Setter Property="FontFamily" Value="Minion Pro"/>
-        <Setter Property="Padding" Value="5,10,5,0"/>
         <Setter Property="BorderBrush" Value="Black"/>
-        <Setter Property="Width" Value="70"/>
-        <Setter Property="Height" Value="70"/>
-        <Setter Property="Margin" Value="2, -2, 2, 0"/>
-        <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Margin" Value="0"/>
     </Style>
     <Style x:Name="CbHolidayStyle" x:Key="CbHolidayStyle" TargetType="CheckBox">
         <Setter Property="Height" Value="40"/>
@@ -105,13 +89,11 @@
 
     <!--NOTES-->
     <Style x:Name="NoteStyle" x:Key="NoteStyle" TargetType="ListViewItem">
-        <Setter Property="MaxHeight" Value="80"/>
-        <Setter Property="BorderThickness" Value="0,0,0,3"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="FontFamily" Value="Minion Pro"/>
-        <Setter Property="FontSize" Value="24"/>
         <Setter Property="Foreground" Value="#FF343434"/>
         <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Margin" Value="15"/>
     </Style>
     <!--ADD-CHANGE-DELETE HOLIDAY-->
     <Style TargetType="FlyoutPresenter" x:Key="NoteFlyoutStyle">
