--- a/Calendar/Calendar.Shared/Themes/Orange.xaml
+++ b/Calendar/Calendar.Shared/Themes/Orange.xaml
@@ -2,16 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Calendar">
-    <Brush x:Key="MonthBg">#FFeb9744</Brush>
-    <Brush x:Key="WeekNamesBg">#FFeb9744</Brush>
-    <Brush x:Key="WeekNamesFg">#FF303030</Brush>
-    <Brush x:Key="DayBg">#ffeb9744</Brush>
-    <Brush x:Key="DayFg">#ff303030</Brush>
-    <Brush x:Key="WeekendBg">#FFeb5f00</Brush>
-    <Brush x:Key="HolidayTypesBg">#FFeb5f00</Brush>
-    <Brush x:Key="MainBg">#ffeb5f00</Brush>
-    <Brush x:Key="MainFg">#FF303030</Brush>
-    <Brush x:Key="NotesBg">#FFf8f9fb</Brush>
-    <Brush x:Key="SelectionFg">#FFf8f9fb</Brush>
-    <Brush x:Key="DaySelected">#FFe5b381</Brush>
+    <Brush x:Key="MainColor">#FFEB5F00</Brush>
+    <Brush x:Key="AdditionalColor">#FFDB9146</Brush>
+    <Brush x:Key="HolidayTitleColor">#FFFF9C37</Brush>
 </ResourceDictionary>
