HolidayList & other bugs HolidayList bugs: 1. Fixed bug with highlighting 2. Full list of events of a given type by pressing the button (3-5) Other bugs: 1. Day's highlighting (selected, today) 2. Note's font scaling

--- a/Calendar/Calendar.Windows/MainPage.xaml
+++ b/Calendar/Calendar.Windows/MainPage.xaml
@@ -210,7 +210,7 @@
                 
                 <TextBox x:Name="HolidayTitle" x:Uid="HolidayTitle"
                          Background="Transparent" 
-                         Foreground="#FFF0F0F2"
+                         Foreground="{StaticResource HolidayTitleColor}"
                          HorizontalAlignment="Center"
                          BorderThickness="0"
                          IsReadOnly="True"
@@ -325,6 +325,7 @@
                                         Tag="{Binding HolidayTag}" 
                                         Background="{Binding Background}"
                                         MinHeight="{Binding Height}"
+                                        FontSize="{Binding FontSize}"
                                         VerticalContentAlignment="Bottom"
                                         Margin="-10, 0, -30, 0"
                                         Tapped="note_Tapped" >
