--- a/Calendar/Calendar.Windows/MainPage.xaml
+++ b/Calendar/Calendar.Windows/MainPage.xaml
@@ -260,9 +260,9 @@
                     <FlyoutBase.AttachedFlyout>
                         <Flyout Opened="Flyout_Opened" Closed="butHolidayFlyout_Closed" AutomationProperties.ItemType="CheckBox" x:Name="butHolidayFlyout" Placement="Full" FlyoutPresenterStyle="{StaticResource ResourceKey=HolidayListStyle}">
                             <StackPanel >
-                                <TextBlock x:Uid="typesTopString" FontSize="20" FontFamily="Minion Pro" Width="350" Padding="0,0,0,15" Height="auto" TextWrapping="WrapWholeWords" VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" MaxLines="2"/>
-                                <ListView x:Name="listOfHolidays" Height="400" ManipulationMode="None" SelectionMode="None" VerticalAlignment="Center"/>
-                                <ListView Width="380" HorizontalAlignment="Center" Height="auto" Padding="0" ManipulationMode="None" SelectionMode="None" >
+                                <TextBlock x:Uid="typesTopString" FontSize="24" FontFamily="Minion Pro" Padding="0,0,0,15" Height="auto" TextWrapping="WrapWholeWords" VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" MaxLines="2"/>
+                                <ListView x:Name="listOfHolidays" Width="auto" HorizontalAlignment="Stretch" Height="400" ManipulationMode="None" SelectionMode="None" VerticalAlignment="Center"/>
+                                <ListView HorizontalAlignment="Center" Height="auto" Padding="0" ManipulationMode="None" SelectionMode="None" >
                                     <ListView.ItemsPanel>
                                         <ItemsPanelTemplate>
                                             <ItemsWrapGrid Orientation="Horizontal"/>
@@ -270,7 +270,7 @@
                                     </ListView.ItemsPanel>
                                     <Button x:Uid="btnHolidays" x:Name="btnHolidays" 
                                                     Click="btnHolidays_Click" 
-                                                    Margin="0,10" 
+                                                    Margin="0, 10" 
                                                     HorizontalAlignment="Center" 
                                                     Height="50" Width="160" 
                                                     FontSize="22"
@@ -289,7 +289,7 @@
             </StackPanel>
 
             <!--notes-->
-            <Grid Name="noteGridMain" 
+            <StackPanel Name="noteGridMain" 
                   Background="#FFF6F6F9" 
                   HorizontalAlignment="Left">
 
@@ -378,8 +378,8 @@
                                             <ItemsWrapGrid Orientation="Horizontal"/>
                                         </ItemsPanelTemplate>
                                     </ListView.ItemsPanel>
-                                    <RadioButton x:Uid="once" IsChecked="True" Tag="none" Width="150"/>
-                                    <RadioButton x:Uid="everyYear" Tag="0" Width="150"/>
+                                    <RadioButton x:Uid="once" FontSize="18" IsChecked="True" Tag="none" Width="150"/>
+                                    <RadioButton x:Uid="everyYear" FontSize="18" Tag="0" Width="150"/>
                                 </ListView>
                                 <ListView 
                                           Name="delChLists" 
@@ -432,42 +432,34 @@
                     </FlyoutBase.AttachedFlyout>
                 </ListView>
 
-
-                <ListView Name="GoToDate" 
+                <StackPanel Name="GoToDate" 
                           VerticalAlignment="Bottom" 
-                          HorizontalContentAlignment="Center" 
                           IsRightTapEnabled="False" 
-                          IsSwipeEnabled="False" 
                           HorizontalAlignment="Center" 
                           Height="auto" Width="auto" 
-                          Margin="100,0,0,20" 
-                          Grid.Row="1" >
-                    <ListView.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <ItemsWrapGrid Orientation="Horizontal"/>
-                        </ItemsPanelTemplate>
-                    </ListView.ItemsPanel>
+                          Orientation="Horizontal" >
                     <DatePicker Name="DatePickerDp" 
-                                HorizontalAlignment="Left" 
-                                Height="35" Width="auto"
-                                Margin="0,5" 
+                                HorizontalAlignment="Center" 
+                                Height="auto" Width="auto"
+                                Margin="10, 5, 20, 5" 
+                                FontSize="20"
                                 VerticalAlignment="Center" 
                                 RequestedTheme="Light" 
                                 DayVisible="False" MonthFormat="{}{month.solo.full}"/>
                     <Button Name="GoToDateBtn" x:Uid="GoToDateBtn" 
                             Tag="licensed" 
-                            FontSize="16" 
-                            Height="40" Width="110" 
-                            Margin="5,2" 
+                            FontSize="20" 
+                            Height="auto" Width="auto" 
+                            Padding="20, 0, 20, 2"
+                            Margin="0, 5, 0, 6" 
                             HorizontalAlignment="Left" 
+                            VerticalAlignment="Center"
                             Click="GoToDateBtn_Click"
                             Style="{StaticResource MainButton}"
                             Background="{StaticResource MainColor}"
                             />
-
-                </ListView>
-
-            </Grid>
+                </StackPanel>
+            </StackPanel>
         </Grid>
     </ScrollViewer>
 </Page>
